--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <title>Document</title>
 </head>
 <body>
-    
+        
+    <script>
+    window.N7_WIDGET_CONFIG = {
+        backendPort: 5009,
+        project: 'ЖК',
+        logoUrl: 'https://sr.neuro7.pro/static/logo1.png'
+    }
+ </script>
+    <script src="/widget_corner.js"></script>
 </body>
 </html>
