index add script

--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
         logoUrl: 'https://sr.neuro7.pro/static/logo1.png'
     }
  </script>
-    <script src="/widget_corner.js"></script>
+    <script src="widget_corner.js"></script>
 </body>
 </html>
