--- a/index.html
+++ b/index.html
@@ -7,13 +7,17 @@
 </head>
 <body>
         
-    <script>
+<script>
     window.N7_WIDGET_CONFIG = {
         backendPort: 5009,
         project: 'ЖК',
-        logoUrl: 'https://sr.neuro7.pro/static/logo1.png'
-    }
+        logoUrl: 'https://sr.neuro7.pro/static/logo1.png',
+
+        whatsapp: "",
+        telegram: "https://t.me/newsvlru",
+        max: ""
+    };
  </script>
-    <script src="widget_corner.js"></script>
+    <script src="widget_corner.js" async></script>
 </body>
 </html>
