add active btn state, +<a>

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
+<body style="background-color: antiquewhite;">
         
 <script>
     window.N7_WIDGET_CONFIG = {
@@ -13,9 +13,9 @@
         project: 'ЖК',
         logoUrl: 'https://sr.neuro7.pro/static/logo1.png',
 
-        whatsapp: "",
+        whatsapp: "https://t.me/newsvlru",
         telegram: "https://t.me/newsvlru",
-        max: ""
+        max: "https://t.me/newsvlru"
     };
  </script>
     <script src="widget_corner.js" async></script>
